partial/force-app/main/default/objects/Appointment__c/fields/View_Interest__c.field-meta.xml
<CustomField>
    <fullName>View_Interest__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>View Interest</label>
    <referenceTo>View_Interest__c</referenceTo>
    <relationshipLabel>Appointments</relationshipLabel>
    <relationshipName>Appointments</relationshipName>
    <type>Lookup</type>
</CustomField>