partial/force-app/main/default/objects/Appointment__c/fields/Viewing__c.field-meta.xml
<CustomField>
    <fullName>Viewing__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Viewing</label>
    <referenceTo>Viewing__c</referenceTo>
    <relationshipLabel>Appointments</relationshipLabel>
    <relationshipName>Appointments</relationshipName>
    <type>Lookup</type>
</CustomField>